--- a/input.html
+++ b/input.html
@@ -15,17 +15,18 @@
         <div class="row">
             <div class="input-group input-group-lg my-2">
                 <span class="input-group-text" id="inputGroup-sizing-lg">First Number</span>
-                <input id="input-one" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                <input id="input-one" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" placeholder="first number ">
               </div>
               
               <div class="input-group input-group-lg my-2">
                 <span class="input-group-text" id="inputGroup-sizing-lg">Second Number</span>
-                <input id="second-number" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                <input id="second-number" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" placeholder="second number">
               </div>
               <div class="input-group input-group-lg my-2">
                 <span class="input-group-text" id="inputGroup-sizing-lg">Symbol & Result</span>
-                <input id="symbol" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg">
+                <input id="symbol" type="text" class="form-control" aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg" placeholder="+-*/  & result">
               </div>
+              
         </div>
         <button id="add-btn" class="px-5 py-1 fs-3 text-white bg-secondary">=</button>
       </div>
